# bevy_neosprite

./: Cargo.toml
assets/sprites/: cobblestone.atlas.ron  cobblestone.neomat.ron  monkey.atlas.ron  monkey.neomat.ron
examples/: animated.rs  animated_monkey.rs  material.rs
src/: lib.rs
src/mesh2d/: light.rs  light_render.rs  material.rs  mesh.rs  mesh2d.wgsl  mesh2d_functions.wgsl  mesh2d_types.wgsl  mesh2d_vertex_output.wgsl  mesh2d_view_bindings.wgsl  mesh2d_view_types.wgsl  mod.rs  neo_material.rs  neo_material.wgsl  neo_material_loader.rs  wireframe2d.rs
src/sprite2d/: loader.rs  mod.rs  sprite.rs
src/utils/: error.rs
srcc/: lib.rs  sprite.rs
srcc/mesh_material/: material.rs  material.wgsl
